# hackathon-2025-team-NoFunding

./: .gitignore  README.md  task.py
coldstart/: README.md  evaluate.py  pyproject.toml
coldstart/cold_start_hackathon/: client_app.py  server_app.py  task.py  util.py
